--- a/view/css/style.css
+++ b/view/css/style.css
@@ -6,6 +6,22 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
+/* Forms */
+.form-button {
+  text-align: center;
+}
+.btn-custom {
+  background-color: #3db2e1;
+  color: #fff;
+  -webkit-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+.btn-custom:hover {
+  background-color: #179ed5;
+  color: #fff;
+}
+
 /* Menu */
 .menu {
   background-color: #3db2e1;
